# sb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: asm.rs  cache.rs  compile.rs  config.rs  main.rs  resolve.rs  run.rs
src/maven/: coord.rs  fetch.rs  mod.rs  pom.rs  resolve.rs
src/tasty/: attributes.rs  deps.rs  format.rs  mod.rs  names.rs  positions.rs  printer.rs  reader.rs  trees.rs
tests/: integration.rs  tasty_tests.rs
tests/neg/abstract_instantiate/: sb.toml
tests/neg/duplicate_class/: sb.toml
tests/neg/explicit_nulls/: sb.toml
tests/neg/missing_dep/: sb.toml
tests/neg/missing_dep/.sb/cache/: classpath
tests/neg/missing_import/: sb.toml
tests/neg/private_access/: sb.toml
tests/neg/scala2/: sb.toml
tests/neg/sealed_exhaustive/: sb.toml
tests/neg/syntax_error/: sb.toml
tests/neg/type_mismatch/: sb.toml
tests/neg/unresolved_ref/: sb.toml
tests/neg/wrong_arity/: sb.toml
tests/pos/cats_dep/: sb.toml
tests/pos/cli_args/: sb.toml
tests/pos/collections/: sb.toml
tests/pos/extensions/: sb.toml
tests/pos/firstproj/: sb.toml
tests/pos/givens/: sb.toml
tests/pos/higher_order/: sb.toml
tests/pos/incremental/: sb.toml
tests/pos/multi_dep/: sb.toml
tests/pos/multi_files/: sb.toml
tests/pos/scala3_3_7/: sb.toml
tests/pos/scala3_4_3/: sb.toml
tests/pos/scala3_5_2/: sb.toml
tests/pos/scala3_7_4/: sb.toml
tests/pos/scala3_8_1/: sb.toml
tests/pos/scala3_enums/: sb.toml
tests/pos/traits_mixins/: sb.toml
tests/pos/type_params/: sb.toml
tests/pos/ujson_dep/: sb.toml
tests/tasty/: sb.toml
(+66 files in other folders)
