[package]
name = "sb"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
anyhow = "1"
indicatif = "0.17"
ureq = "3"
roxmltree = "0.20"
dirs = "6"
zip = "2"

[dev-dependencies]
tempfile = "3"
